subscribedUser can be logged in after disconnect