@@ -8,8 +8,9 @@ import BusinessLayer.Users.SubscribedUser;
 import ORM.DAOs.Users.SubscribedUserDAO;
 import ORM.Users.PaymentMethod;
 
-import java.util.Collection;
-import java.util.Objects;
+import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 public class SubscribedUserMapper implements DBImpl<SubscribedUser, String>, CastEntity<ORM.Users.SubscribedUser, SubscribedUser> {
 
@@ -53,8 +54,23 @@ public class SubscribedUserMapper implements DBImpl<SubscribedUser, String>, Cas
     public SubscribedUser fromEntity(ORM.Users.SubscribedUser entity) {
         if (entity == null)
             return null;
-        return new SubscribedUser(entity.getUsername(), entity.isNotRemoved(), entity.getPassword(),
-                entity.getAdministrators().stream().map(admin -> shopAdministratorMapper.run().fromEntity(admin)).toList(), entity.isIs_login());
+        SubscribedUser user = new SubscribedUser(entity.getUsername(), entity.isNotRemoved(), entity.getPassword(), new ArrayList<>(),
+                entity.isIs_login());
+
+        //List<ShopAdministrator> administrators;
+        //Map<Integer, ShopAdministrator> shopAdministratorMap = new ConcurrentHashMap<>();
+        //if (entity.getAdministrators() != null) {
+        //    administrators = entity.getAdministrators().stream().map(admin -> {
+        //        ShopAdministrator buss_admin = shopAdministratorMapper.run().fromEntity(admin);
+        //        buss_admin.setUser(user);
+        //        return buss_admin;
+        //    }).collect(Collectors.toList());
+//
+        //    administrators.stream().peek(admin -> shopAdministratorMap.put(admin.getShopID(), admin));
+        //}
+//
+        //user.setShopAdministrator(shopAdministratorMap);
+        return user;
     }
 
     @Override
